--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,39 +50,21 @@ jobs:
           # 使用pip安装项目的依赖项
           pip install requests rsa pyquery selenium
 
-      - name: Install Google Chrome
+      - name: Install Chrome 126
         run: |
-          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo apt update
-          sudo apt install -y ./google-chrome-stable_current_amd64.deb
-          rm -f google-chrome-stable_current_amd64.deb
+          wget https://storage.googleapis.com/chrome-for-testing-public/126.0.6478.114/linux64/chrome-linux64.zip
+          unzip chrome-linux64.zip
+          sudo mv chrome-linux64 /opt/chrome
+          sudo ln -s /opt/chrome/chrome /usr/bin/google-chrome
+          rm -f chrome-linux64.zip
 
-      - name: Install ChromeDriver (auto-match version)
+      - name: Install ChromeDriver 126
         run: |
-          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+\.\d+')
-          CHROME_MAJOR=$(echo $CHROME_VERSION | cut -d '.' -f 1)
-          
-          echo "Installed Chrome version: $CHROME_VERSION"
-
-          DRIVER_VERSION=$(curl -s "https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions-with-downloads.json" \
-            | grep -A 10 "\"$CHROME_MAJOR\"" \
-            | grep '"version":' \
-            | head -n 1 \
-            | sed -E 's/[^0-9.]//g')
-
-          if [ -z "$DRIVER_VERSION" ]; then
-            echo "❌ Failed to find matching ChromeDriver version for Chrome $CHROME_MAJOR"
-            exit 1
-          fi
-
-          echo "Found matching ChromeDriver version: $DRIVER_VERSION"
-
-          # 下载并安装
-          wget -O chromedriver.zip "https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/${DRIVER_VERSION}/linux64/chromedriver-linux64.zip"
-          unzip chromedriver.zip
+          wget https://storage.googleapis.com/chrome-for-testing-public/126.0.6478.114/linux64/chromedriver-linux64.zip
+          unzip chromedriver-linux64.zip
           sudo mv chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
           sudo chmod +x /usr/local/bin/chromedriver
-          rm -rf chromedriver.zip chromedriver-linux64
+          rm -rf chromedriver-linux64.zip chromedriver-linux64
 
 
       - name: Get Connection
