--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
           # 使用pip安装项目的依赖项
           pip install requests rsa pyquery selenium
 
-      # === 缓存 Chrome ===
+      # === 缓存 Chrome v126 ===
       - name: Cache Chrome
         id: cache-chrome
         uses: actions/cache@v4
@@ -64,11 +64,15 @@ jobs:
           wget https://storage.googleapis.com/chrome-for-testing-public/126.0.6478.114/linux64/chrome-linux64.zip
           unzip chrome-linux64.zip
           sudo mv chrome-linux64 /opt/chrome
-          sudo rm -f /usr/bin/google-chrome || true
-          sudo ln -s /opt/chrome/chrome /usr/bin/google-chrome
           rm -f chrome-linux64.zip
 
-      # === 缓存 ChromeDriver ===
+      # 替换系统默认 Chrome（避免系统自带的 Chrome 版本不符合要求）
+      - name: Replace system Chrome with Chrome 126
+        run: |
+          sudo rm -f /usr/bin/google-chrome
+          sudo ln -s /opt/chrome/chrome /usr/bin/google-chrome
+
+      # === 缓存 ChromeDriver v126 ===
       - name: Cache ChromeDriver
         id: cache-chromedriver
         uses: actions/cache@v4
