--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,7 +83,8 @@ jobs:
           rm -f chrome-linux64.zip
 
 
-      - run: echo "Cache hit (Chrome): ${{ steps.cache-chrome.outputs['cache-hit'] }}"
+      - run: |
+          echo "Cache hit (Chrome): ${{ steps.cache-chrome.outputs['cache-hit'] }}"
 
       # 替换系统默认 Chrome（避免系统自带的 Chrome 版本不符合要求）
       - name: Replace system Chrome with Chrome 126
@@ -107,8 +108,9 @@ jobs:
           sudo mv chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
           sudo chmod +x /usr/local/bin/chromedriver
           rm -rf chromedriver-linux64.zip chromedriver-linux64
-      
-      - run: echo "Cache hit (ChromeDriver): ${{ steps.cache-chromedriver.outputs['cache-hit'] }}"
+
+      - run: |
+          echo "Cache hit (ChromeDriver): ${{ steps.cache-chromedriver.outputs['cache-hit'] }}"
 
 
       - name: Get Connection
