--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-# 工作流的名称
 name: CheckScores
 
 # 工作流运行的名称
@@ -7,8 +6,8 @@ run-name: ${{ github.workflow }} ${{ github.sha }}
 # 指定此工作流的触发器
 on:
   schedule:
-    - cron: "*/5 * * * *" # 每5分钟自动执行一次
-  workflow_dispatch: # 可以手动执行
+    - cron: "*/5 * * * *"
+  workflow_dispatch:
     inputs:
       force_push_message:
         # 如果为True，则当次运行时无论成绩是否已更新，都会进行推送
@@ -21,7 +20,6 @@ on:
           - "False"
 
 jobs:
-  # 检查成绩
   CheckScores:
     name: CheckScores
 
@@ -31,7 +29,7 @@ jobs:
     steps:
       # 使用GitHub Actions提供的动作来检出代码库
       - name: Checkout Repository
-        uses: actions/checkout@main
+        uses: actions/checkout@v4
 
       - name: Configure Git
         run: |
@@ -43,28 +41,12 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-          cache: "pip"  # ✅ 启用官方内置 pip 缓存
+          cache: "pip"
 
-
-      
-      # pip 缓存 + requirements.txt 安装方式
-      - name: Cache pip installed packages
-        id: cache-pip-installed
-        uses: actions/cache@v4
-        with:
-          path: ~/.local/lib/python3.10/site-packages
-          key: ${{ runner.os }}-pip-installed-${{ hashFiles('requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-installed-
-
-      
       - name: Install dependencies
         run: |
-          if [ ! -d ~/.cache/pip ]; then
-            echo "No pip cache found, installing dependencies..."
-          fi
+          echo "Installing dependencies with pip (cache managed by actions/setup-python)"
           pip install -r requirements.txt
-
 
       # === 缓存 Chrome v126 ===
       - name: Cache Chrome
@@ -82,11 +64,10 @@ jobs:
           sudo mv chrome-linux64 /opt/chrome
           rm -f chrome-linux64.zip
 
-
       - run: |
           echo "Cache hit (Chrome): ${{ steps.cache-chrome.outputs['cache-hit'] }}"
 
-      # 替换系统默认 Chrome（避免系统自带的 Chrome 版本不符合要求）
+      # === 替换系统 Chrome 为 Chrome 126 防止系统自带的 Chrome 版本不符合要求 ===
       - name: Replace system Chrome with Chrome 126
         run: |
           sudo rm -f /usr/bin/google-chrome
@@ -111,7 +92,6 @@ jobs:
 
       - run: |
           echo "Cache hit (ChromeDriver): ${{ steps.cache-chromedriver.outputs['cache-hit'] }}"
-
 
       - name: Get Connection
         run: |
